--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+buildscript {
+    ext {
+        kotlin_version = '1.6.21'
+        nav_version = "2.5.1"
+        room_version = "2.4.3"
+        retrofit_version = "2.9.0"
+        hilt_version = "2.38.1"
+        glide_version ="4.12.0"
+        lifecycle_version = "2.5.1"
+        mockito_version = "3.11.2"
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
 task clean(type: Delete) {
