--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,12 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
 }
+def getApiKey() {
+    def keysProperties = new Properties()
+    keysProperties.load(project.rootProject.file("local.properties").newDataInputStream())
+    def ApiKey = keysProperties.getProperty("apiKey", "")
+    return ApiKey
+}
 
 android {
     compileSdk 32
@@ -20,9 +26,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField("String", "API_KEY", getApiKey())
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "API_KEY", getApiKey())
         }
     }
     compileOptions {
